syntax = "proto3";

package pb;
import "barber_shops.proto";


option go_package = "barbershop/src/pb";


message CreateBarberShopsRequest {
    string code_barber_shop = 1;
    string name = 2;
    fixed32 location = 3;
    string address = 4;
}

message CreateBarberShopsResponse {
    BarberShops barber_shop = 1;
}